# pixwake

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  debug_medium_farm.py  mypy.ini  ouu5.py  pyproject.toml  rotoravg.py  sandbox.py
.github/workflows/: formatting.yml  mypy.yml  run-tests-linux.yml  run-tests.yml  tests.yml
data/: rans_addedti_surrogate.msgpack  rans_deficit_surrogate.msgpack
src/pixwake/: __init__.py  core.py  jax_utils.py  pixwake.py  plot.py  resource.py  rotor_avg.py  rotor_avg_models.py  superposition.py  types.py  utils.py
src/pixwake/deficit/: __init__.py  base.py  gaussian.py  noj.py  rans.py  selfsimilarity.py  utils.py
src/pixwake/definitions/: __init__.py  v80.py
src/pixwake/models/: base.py  gaussian.py  noj.py  rans.py
src/pixwake/optim/: __init__.py  sgd.py
src/pixwake/turbulence/: __init__.py  base.py  crespo.py
test/: conftest.py  test_against_pywake.py  test_energy_calculation.py  test_flow_map.py  test_grad_chunking.py  test_heterogeneous_resource.py  test_integration.py  test_jax_utils.py  test_multiple_turbine_types.py  test_optim_sgd.py  test_pixwake.py  test_plotting.py  test_rans_surrogate.py  test_rans_surrogate_example.py  test_rotor_avg.py  test_selfsimilarity.py  test_sim_context.py  test_superposition.py  test_turbulence.py  test_utils.py
test/benchmark/: against_pywake.py  test_benchmarks.py
test/benchmarks/: performance_comparison.py
tests/: test_rotor_avg.py
