[project]
authors = [{ name = "ernie", email = "ernim@dtu.dk" }]
name = "pixwake"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = ["jax", "matplotlib", "scipy"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "linux-aarch64", "osx-arm64"]
# conda-pypi-map = { conda-forge = "ppypi_map.json" }

[tool.pixi.pypi-dependencies]
pixwake = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "<3.15"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
py-wake = ">=2.6.12,<3"
mypy = ">=1.17.1,<2"
memory_profiler = ">=0.61.0,<0.62"
git-lfs = ">=3.7.1,<4"

[tool.pixi.feature.test.pypi-dependencies]
silent-killers = ">=0.1.7,<0.2"

[tool.pixi.feature.format.pypi-dependencies]
silent-killers = ">=0.1.7,<0.2"

[tool.pixi.feature.format.dependencies]
pre-commit = "*"
ruff = "*"

[tool.pixi.feature.format.tasks]
format = "pre-commit run --all-files"

[tool.pixi.feature.test.tasks]
test = "pytest test/ --cov=src/pixwake -n auto --dist worksteal"

[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
jax = { version = "*", extras = ["cuda12"] }

[tool.pixi.feature.rocm.target.linux-64.pypi-dependencies]
jax = { version = "==0.5.0", extras = ["rocm"] }

[tool.pixi.feature.rocm.target.linux-64.dependencies]
python = "<3.13"

[tool.pixi.environments]
default = ["test", "format"]
test = ["test"]
format = { features = ["format"], no-default-feature = true }
cuda = ["cuda", "test"]
rocm = ["rocm", "test"]

[tool.coverage.report]
fail_under = 95
precision = 2
